add /voicechat/ws/rooms endpoint
