# docs/swagger.yaml
@@ -57,36 +57,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /voicechat/connect:
-    get:
-      consumes:
-      - application/json
-      description: connect to existing room
-      parameters:
-      - description: id of room
-        in: query
-        name: room_id
-        required: true
-        type: string
-      - description: username
-        in: query
-        name: peer_name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.MessageJson'
-      summary: Connect to room handler
-      tags:
-      - voicechat
   /voicechat/create:
     post:
       consumes:
@@ -130,6 +100,55 @@ paths:
           schema:
             $ref: '#/definitions/models.Response'
       summary: Rooms list handler
+      tags:
+      - voicechat
+  /voicechat/ws/connect:
+    get:
+      consumes:
+      - application/json
+      description: connect to existing room
+      parameters:
+      - description: id of room
+        in: query
+        name: room_id
+        required: true
+        type: string
+      - description: username
+        in: query
+        name: peer_name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.MessageJson'
+      summary: Connect to room handler
+      tags:
+      - voicechat
+  /voicechat/ws/rooms:
+    get:
+      consumes:
+      - application/json
+      description: connect to socket to get rooms changes
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.MessageJson'
+      summary: Rooms list ws handler
       tags:
       - voicechat
 swagger: "2.0"
